--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "import unittest\n",
     "import matplotlib.pyplot as plt\n",
-    "import re"
+    "import re\n",
+    "import scipy.sparse"
    ]
   },
   {
@@ -68,7 +69,7 @@
     "3. computed the TF-IDF values of the $1,000$ keywords,\n",
     "4. splited the whole dataset into training set and validation set using 10-fold cross-valudation,\n",
     "5. used the _TF-IDF values_ as covariates, the _star values_ of review as responses, to build a logistic regression model in the training set,\n",
-    "6. tries 3 different tuning parameters respectively,\n",
+    "6. tried 3 different tuning parameters respectively,\n",
     "7. applied the models built in training set to validation set and obtained the predicted _star values_ for each tuning parameter,\n",
     "8. computed the Mean Squared Error (MSE) between true _star value_ and predicted _star value_ in validation set, \n",
     "9. and chose the optimal tuning parameters which produces lowest MSE."
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,10 @@
     "# create TF-IDF\n",
     "vectorizer = TfidfVectorizer(stop_words = \"english\")\n",
     "text_features = vectorizer.fit_transform(text_clean)\n",
-    "vocab = vectorizer.get_feature_names()"
+    "vocab = vectorizer.get_feature_names()\n",
+    "# save\n",
+    "scipy.sparse.save_npz('result/text_features.npz', text_features)\n",
+    "np.save('result/star', star)"
    ]
   },
   {
@@ -165,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +262,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**compute MSE with 10 fold cross-validation, of first 1,000 keywords, with randome splitting seed = 1, and tuning parameters = (100, 1000, 10000, 100000).**\n",
+    "**compute MSE with 10 fold cross-validation, of first 1,000 keywords, with random splitting seed for training and validation sets = 1, and original tuning parameters = (1, 100, 1000, 10000, 100000).**\n",
     "\n",
     "**NOTE: Original tuning parameter range is [1, 100,000], the current range [10, 100] is selected after many trails as the optimal range of tuning parameters**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +384,7 @@
        "9  0.753630       100.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,6 +394,7 @@
     "     'mse' : pd.Series(mse)}\n",
     "df = pd.DataFrame(d)\n",
     "df_sorted = df.sort_values(by=['mse'])\n",
+    "df_sorted.to_hdf('result/df_sorted.h5', 'df_sorted')\n",
     "print(\"Sorted MSE and corresponding parameters: small to big\")\n",
     "df_sorted"
    ]
