--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import necessary packages\n",
@@ -14,7 +12,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import shelve"
+    "import shelve\n",
+    "import scipy"
    ]
   },
   {
@@ -769,6 +768,260 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### TF-IDF transformation\n",
+    "#### Definition of TF-IDF Transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF-IDF means \"Term Frequency - Inverse Document Frequency\". It is a powerful technique to detect important words in a collection of documents. \"Term Frequency\" (TF) meansures the frequency of word $w_i$ in document $d_j$, and the \"Inverse Document Frequency\" (IDF) measures how much information the word provides, i.e., the frequency of word $w_i$ in the collection of documents. The TF-IDF value for a word $w_i$ in document $d_j$ is positively associated with word frequencies and negatively associated with document frequencies. The math formula for TF-IDF is:\n",
+    "\n",
+    "$$TF-IDF(w_i, d_j) = TF(w_i, d_j) \\times IDF(w_i)$$\n",
+    "\n",
+    "And IDF can be smoothed using the formula:\n",
+    "\n",
+    "$$IDF_{smooth}(w_i) = log(\\frac{N}{1 + n_i})$$\n",
+    "\n",
+    "where $N$ is the number of documents considered and $n_i$ is the frequency of $w_i$ in the all documents considered.\n",
+    "\n",
+    "In this project, TF-IDF is used in logistic regression classification. In the following analysis, we did several steps to fit the best logistic regression model:\n",
+    "\n",
+    "#### Steps in TF-IDF Transformation\n",
+    "1. constructed the TF-IDF matrix, the matrix is 'text_features', a sparse matrix. Also, the reponses of all observations are in 'star', an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load transformed data\n",
+    "text_features = scipy.sparse.load_npz('result/text_features.npz')\n",
+    "star = np.load('result/star.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of observations in the text_features dataset is 60222 \n",
+      "Number of covariates in the text_features dataset is 50137\n",
+      "The format of text_feature is\n",
+      "   (0, 17785)\t0.060146376659\n",
+      "  (0, 19534)\t0.0664307345244\n",
+      "  (0, 37080)\t0.0971322128585\n",
+      "  (0, 6868)\t0.215221170104\n",
+      "  (0, 41758)\t0.14424586198\n",
+      "  (0, 16242)\t0.115560138128\n",
+      "  (0, 3668)\t0.169463104229\n",
+      "  (0, 33687)\t0.18134186701\n",
+      "  (0, 42347)\t0.244903534338\n",
+      "  (0, 30214)\t0.173935675158\n",
+      "  (0, 19663)\t0.219337002949\n",
+      "  (0, 10430)\t0.210710863093\n",
+      "  (0, 38753)\t0.253060975895\n",
+      "  (0, 11918)\t0.548103837493\n",
+      "  (0, 1483)\t0.283007805783\n",
+      "  (0, 2376)\t0.371248887227\n",
+      "  (0, 43674)\t0.274472118608\n",
+      "The format of star is\n",
+      " [2 4 5 ..., 4 5 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of observations in the text_features dataset is\", text_features.shape[0],\n",
+    "      \"\\nNumber of covariates in the text_features dataset is\", text_features.shape[1])\n",
+    "print(\"The format of text_feature is\\n\", text_features[-1:])\n",
+    "print(\"The format of star is\\n\", star)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Next Step: \n",
+    "4. splited the whole dataset into training set and validation set using 10-fold cross-valudation,\n",
+    "5. used the _TF-IDF values_ as covariates, the _star values_ of review as responses, to build a logistic regression model in the training set,\n",
+    "6. tried 3 different tuning parameters respectively,\n",
+    "7. applied the models built in training set to validation set and obtained the predicted _star values_ for each tuning parameter,\n",
+    "8. computed the Mean Squared Error (MSE) between true _star value_ and predicted _star value_ in validation set, \n",
+    "9. and chose the optimal tuning parameters which produces lowest MSE.\n",
+    "\n",
+    "#### Here, we run a function called 'compute_CV_mse' to do the rest steps above. \n",
+    "**We computed MSE with 10 fold cross-validation, of first 1,000 keywords, with random splitting seed for training and validation sets = 1, and original tuning parameters = (1, 100, 1000, 10000, 100000). After  many trails, we selected the current range [10, 100] as the optimal range of tuning parameters.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we showed the output MSE with corresponding tuning parameters, sorted smallest to largest:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted MSE and corresponding parameters: small to big\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mse</th>\n",
+       "      <th>parameters</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.748335</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.749202</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.749553</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.749811</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.749885</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.750014</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.751435</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.753058</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.753077</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.753630</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        mse  parameters\n",
+       "4  0.748335        50.0\n",
+       "3  0.749202        40.0\n",
+       "1  0.749553        20.0\n",
+       "2  0.749811        30.0\n",
+       "5  0.749885        60.0\n",
+       "6  0.750014        70.0\n",
+       "7  0.751435        80.0\n",
+       "8  0.753058        90.0\n",
+       "0  0.753077        10.0\n",
+       "9  0.753630       100.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sorted = pd.read_hdf('result/df_sorted.h5', 'df_sorted')\n",
+    "print(\"Sorted MSE and corresponding parameters: small to big\")\n",
+    "df_sorted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the trend of MSE by tuning parameter is plotted:\n",
+    "<img src=\"./fig/mse_logistic.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimum MSE is 0.7483 with tuning parameter = 50.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The minimum MSE is\", np.round(df_sorted.iloc[0][0], 4), \"with tuning parameter =\", df_sorted.iloc[0][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion:\n",
+    "\n",
+    "**The minimum Cross-validated MSE is 0.7483 with tuning parameter = 50**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Author Contributions"
    ]
   },
@@ -816,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
