--- a/main.ipynb
+++ b/main.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import necessary packages\n",
@@ -795,7 +797,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# load transformed data\n",
@@ -1035,7 +1039,6 @@
     "\n",
     "**Ningning Long**:\n",
     "-\t‘LDA.ipynb’, latent dirichelet allocation modeling and analysis\n",
-    "-\t‘makefile’\n",
     "-\t‘environment.yml’\n",
     "-\tSome write-up of ‘main.ipynb’\n",
     "\n",
@@ -1049,6 +1052,7 @@
     "-\t‘README.md’\n",
     "-\tSome write-up of ‘main.ipynb’\n",
     "-\t‘LICENSE.md’\n",
+    "-\t‘Makefile’\n",
     "\n"
    ]
   }
@@ -1069,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
