minor changes in grammar

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# read the data \n",
@@ -106,7 +108,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def tokenize_text(raw):\n",
@@ -154,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "text_array = tokenize_text(raw_all)"
@@ -170,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# save the dictionary results\n",
@@ -290,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We decide to set the validation set as the 896 reviews from the restaurant that have the largest number of reviews. Then, the rest of the reviews are considered as training set."
+    "We decide to set the validation set as the 896 reviews from the restaurant that has the largest number of reviews. Then, the rest of the reviews are considered as training set."
    ]
   },
   {
@@ -373,7 +381,7 @@
     "\n",
     "**id2word**: required. The LdaModel class requires our previous dictionary to map ids to strings.\n",
     "\n",
-    "**passes**: optional. The number of laps the model will take through corpus. The greater the number of passes, the more accurate the model will be. A lot of passes can be slow on a very large corpus.\n",
+    "**passes**: optional. The number of laps that the model will take through corpus. The greater the number of passes, the more accurate the model will be. A lot of passes can be slow on a very large corpus.\n",
     "\n",
     "**random_state**: optional. It is similar to random seed. Controlling random_state can make sure the result is the same every time we run the model "
    ]
@@ -511,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look at an original review of the validation set."
+    "Let's take a look at an original review from the validation set."
    ]
   },
   {
@@ -614,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, we do not a high expectation about the prediction accuracy for customer ratings according to the topics, and the next section confirmed our concern."
+    "Thus, we do not have a high expectation about the prediction accuracy for customer ratings according to the topics, and the next section confirms our concern."
    ]
   },
   {
@@ -641,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def design_matrix_creation(n_topics, topics_prob_list):\n",
@@ -706,7 +716,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create linear regression object\n",
@@ -836,7 +848,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_tokenize_text_input()\n",
@@ -862,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
