--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -35,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "review = pd.read_csv(\"data/reviews.csv\")"
@@ -85,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# make raw dataset into the format for TF-idf transformation\n",
@@ -106,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -125,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -170,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compute_CV_mse(df_text, df_star, n_fold, n_words, seed, parameters):\n",
@@ -233,9 +245,9 @@
     "        text_features_val = df_text[val_idx]\n",
     "        star_train = df_star[train_idx]\n",
     "        star_val = df_star[val_idx]\n",
-    "        # using $chi^2$ independent test to select top  1,0001,000  keywords from training set\n",
+    "        # using $chi^2$ independent test to select top  1,000 keywords from training set\n",
     "        fselect = SelectKBest(chi2, k = n_words)\n",
-    "        # transform training set to format that fits fselect functuon\n",
+    "        # transform training set to format that fits select functuon\n",
     "        text_features_train = fselect.fit_transform(text_features_train, star_train)\n",
     "        text_features_val = text_features_val[:, fselect.get_support()]\n",
     "        # compute MSE for each parameter\n",
@@ -270,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# output\n",
@@ -281,7 +295,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -409,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -433,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -463,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def test_n_words_positive():\n",
@@ -521,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_n_words_positive()\n",
@@ -547,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
