add random seed to logistic.ipynb

--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -31,7 +31,20 @@
     "import unittest\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
-    "import scipy.sparse"
+    "import scipy.sparse\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# set the seed\n",
+    "random.seed(259)"
    ]
   },
   {
