--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we have seen from the previous notebook, topic probabilities of reviews do not have good predictive powers of customers’ ratings of restaurants. Thus, in this notebook, we investigate how multinomial logistic regression performs. We will calculate the TF-IDF statistics from the reviews and use them to predict customers’ ratings. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 1: load dependencies and read data"
    ]
   },
@@ -55,6 +62,7 @@
    },
    "outputs": [],
    "source": [
+    "# load the data\n",
     "review = pd.read_csv(\"data/reviews.csv\")"
    ]
   },
@@ -85,7 +93,7 @@
     "2. used $\\chi^2$ independent test to select top $1,000$ keywords from training set,\n",
     "3. computed the TF-IDF values of the $1,000$ keywords,\n",
     "4. splited the whole dataset into training set and validation set using 10-fold cross-valudation,\n",
-    "5. used the _TF-IDF values_ as covariates, the _star values_ of review as responses, to build a logistic regression model in the training set,\n",
+    "5. used the _TF-IDF values_ as covariates, the _star values_ of review (ratings) as responses, to build a logistic regression model in the training set,\n",
     "6. tried 3 different tuning parameters respectively,\n",
     "7. applied the models built in training set to validation set and obtained the predicted _star values_ for each tuning parameter,\n",
     "8. computed the Mean Squared Error (MSE) between true _star value_ and predicted _star value_ in validation set, \n",
@@ -287,9 +295,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**compute MSE with 10 fold cross-validation, of first 1,000 keywords, with random splitting seed for training and validation sets = 1, and original tuning parameters = (1, 100, 1000, 10000, 100000).**\n",
+    "### Execute the function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "compute MSE with 10 fold cross-validation, of first 1,000 keywords, with random splitting seed for training and validation sets = 1, and original tuning parameters = (1, 100, 1000, 10000, 100000).\n",
     "\n",
-    "**NOTE: Original tuning parameter range is [1, 100,000], the current range [10, 100] is selected after many trails as the optimal range of tuning parameters**"
+    "**NOTE:** Original tuning parameter range is [1, 100,000], the current range [10, 100] is selected after many trails as the optimal range of tuning parameters**"
    ]
   },
   {
@@ -465,7 +480,8 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -484,6 +500,13 @@
     "plt.title(\"Cross-validation MSE by tuning parameters \\nin multinomial logistic regression\")\n",
     "plt.savefig(\"fig/mse_logistic.png\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe that the multinomial logistic regression performs reasonably well. The cross-validated mean square error (MSE) is 0.748. It means that TF-IDF statistics from the reviews have explanatory and predictive powers of customers’ ratings of restaurants. \n"
    ]
   },
   {
