--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -41,8 +41,8 @@
    "outputs": [],
    "source": [
     "# the local path of JSON files that needed\n",
-    "json_business_path='../dataset/business.json'\n",
-    "json_review_path='../dataset/review.json'"
+    "json_business_path='./data/business.json'\n",
+    "json_review_path='./data/review.json'"
    ]
   },
   {
@@ -590,8 +590,8 @@
    "outputs": [],
    "source": [
     "# we save the restaurants data and reviews data into csv for future analysis\n",
-    "reviews_keep.to_csv('reviews.csv')\n",
-    "restaurants.to_csv('restaurant.csv')"
+    "reviews_keep.to_csv('./data/reviews.csv')\n",
+    "restaurants.to_csv('./data/restaurant.csv')"
    ]
   }
  ],
