fix readme and data clearning

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -383,7 +383,7 @@
    "source": [
     "# save all the reviews for restaurants in Ohio. It's around 600Mb, so\n",
     "# just store them locally\n",
-    "with shelve.open('../dataset/ohio_all_reviews') as db:\n",
+    "with shelve.open('./result/ohio_all_reviews') as db:\n",
     "    db['reviews'] = review_contents"
    ]
   },
