--- a/main.ipynb
+++ b/main.ipynb
@@ -68,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -203,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -379,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -415,7 +421,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -505,7 +513,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -555,7 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -606,7 +618,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -643,7 +657,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -705,7 +721,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -809,7 +827,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -859,8 +879,9 @@
     "8. computed the Mean Squared Error (MSE) between true _star value_ and predicted _star value_ in validation set, \n",
     "9. and chose the optimal tuning parameters which produces lowest MSE.\n",
     "\n",
-    "#### Here, we run a function called 'compute_CV_mse' to do the rest steps above. \n",
-    "**We computed MSE with 10 fold cross-validation, of first 1,000 keywords, with random splitting seed for training and validation sets = 1, and original tuning parameters = (1, 100, 1000, 10000, 100000). After  many trails, we selected the current range [10, 100] as the optimal range of tuning parameters.**"
+    "Here, we run a function called 'compute_CV_mse' to do the rest steps above. \n",
+    "\n",
+    "We computed MSE with 10 fold cross-validation, of first 1,000 keywords, with random splitting seed for training and validation sets = 1, and original tuning parameters = (1, 100, 1000, 10000, 100000). After  many trails, we selected the current range [10, 100] as the optimal range of tuning parameters."
    ]
   },
   {
@@ -873,7 +894,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -998,7 +1021,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1031,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project, we have found the topics of Yelp customers reviews by LDA and the used the topics probabilities to predict the customer's ratings. LDA has selected 10 different topics from our training set, and these topics different parts of the restaurants, such as location, service, drinks, and types of food. However, topic probabilities of reviews do not have good predictive powers of customers’ ratings of restaurants. Thus, in order to predict customers’ ratings, we also investigate how multinomial logistic regression performs with TF-IDF statistics from the reviews. The result shows that TF-IDF statistics from the reviews have better explanatory and predictive powers than LDA topics. \n",
+    "In this project, we have found the topics of Yelp customers reviews by LDA and then used the topics probabilities to predict the customer's ratings. LDA has selected 10 different topics from our training set, and these topics reflect different parts of the restaurants, such as location, service, drinks, and types of food. However, topic probabilities of reviews do not have good predictive powers of customers’ ratings of restaurants. Thus, in order to predict customers’ ratings, we also investigate how multinomial logistic regression performs with TF-IDF statistics from the reviews. The result shows that TF-IDF statistics from the reviews have better explanatory and predictive powers than LDA topics. \n",
     "\n",
     "\n",
     "Since the time is limited, there are a lot of improvements we can make in our analysis. For instance, we can choose more parameters to tune while we apply LDA, in order to find more interpretable topics. Also, we can take a look at the data from another state to see the topics difference among different states. Furthermore, trying more machine learning models in predicting customer's ratings from the reviews can be interesting too. "
@@ -1088,7 +1113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
